--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -15,14 +15,16 @@
     <main>
         <div class="content">
             <ul>
-                <li><a href="bloks.html">Блоки</a></li>
+                <li><a href="blocks.html">Блоки</a></li>
                 <li><a href="dollar.html">Доллар</a></li>
+                <li><a href="quotes-hh.html">Катировки HH</a></li>
+                <li><a href="euro.html">Курс евро</a></li>
             </ul>
         </div>
     </main>
 
 
-    <footer ondblclick="">
+    <footer>
         &copy; Горшков Родион. 2 курс 2025
     </footer>
 </body>
