--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h4><a href="lab6/lab6.html">Лабораторная работа 6</a></h4>
                     </li>
                     <li>
-                        <h4><a href="">Лабораторная работа 7</a></h4>
+                        <h4><a href="lab7/lab7.html">Лабораторная работа 7</a></h4>
                     </li>
                     <li>
                         <h4><a href="">Лабораторная работа 8</a></h4>
