Добавле раздел погода

--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -19,6 +19,7 @@
                 <li><a href="dollar.html">Доллар</a></li>
                 <li><a href="quotes-hh.html">Катировки HH</a></li>
                 <li><a href="euro.html">Курс евро</a></li>
+                <li><a href="weather.html">Погода</a></li>
             </ul>
         </div>
     </main>
