--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -15,6 +15,14 @@
 
     <main>
         <div id="app">
+            <h1 :title="messageRus">
+                {{ message }}
+            </h1>
+            <p>
+                Счетчик: {{ counter }}
+            </p>
+            <button @click="incCounter">++</button>
+            <button @click="decCounter">--</button>
         </div>
     </main>
 
@@ -26,7 +34,19 @@
     <script>
         Vue.createApp({
             data() {
-                return
+                return {
+                    message: 'Hello!',
+                    messageRus: 'Привет!',
+                    counter: 1
+                }
+            },
+            methods: {
+                incCounter() {
+                    this.counter++
+                },
+                decCounter() {
+                    this.counter--
+                },
             }
         }).mount('#app');
     </script>
