--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <h4><a href="lab7/lab7.html">Лабораторная работа 7</a></h4>
                     </li>
                     <li>
-                        <h4><a href="">Лабораторная работа 8</a></h4>
+                        <h4><a href="lab8/lab8.html">Лабораторная работа 8</a></h4>
                     </li>
                 </ul>
             </div>
