--- a/lab4/comic.html
+++ b/lab4/comic.html
@@ -36,7 +36,7 @@
 
     <main>
         <div class="content">
-            <img class="img-comic" src="../static/images/tralalelo.webp" alt="tralalelo-tralala">
+            <img src="../static/images/tralalelo.webp" alt="tralalelo-tralala">
 
             <div class="tralala" style="height: 50px; width: 100px; left: 300px; top: 250px;"></div>
             <div class="tralala" style="height: 70px; width: 150px; left: 350px; top: 280px;"></div>
