--- a/lab7/blocks.html
+++ b/lab7/blocks.html
@@ -11,6 +11,7 @@
             let newBlock = document.createElement('div')
             newBlock.style.backgroundColor = 'green'
             newBlock.style.height = '40px'
+            newBlock.style.width = '40px'
             
             document.querySelector('main').appendChild(newBlock)
         }
