--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Лабораторная работа 8</title>
     <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/main.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
@@ -34,6 +35,22 @@
                     {{ flower }} <button @click="edit(id, flower)">?</button>
                 </li>
             </ul>
+            <h2>Calc</h2>
+            <div class="row g-5">
+                <div class="col-auto">
+                    <input type="number" v-model="a" class="form-control">
+                </div>
+                <div class="col-auto">+</div>
+                <div class="col-auto">
+                    <input type="number" v-model="b" class="form-control">
+                </div>
+                <div class="col-auto">
+                    <button @click="sum" class="btn btn-primary">=</button>
+                </div>
+                <div class="col-auto">
+                    <span class="badge text-bd-primary fs-5">{{result}}</span>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -54,7 +71,10 @@
                         age: 18,
                         tel: '222-33-44'
                     },
-                    flowers: ['роза', 'тюльпан', 'маргаритка', 'георгин', 'одуванчик']
+                    flowers: ['роза', 'тюльпан', 'маргаритка', 'георгин', 'одуванчик'],
+                    a: 1,
+                    b: 10,
+                    result: '',
                 }
             },
             methods: {
@@ -73,9 +93,14 @@
                     setTimeout(() => {
                         this.flowers[id] = newName;
                     }, 3000)
-                }
+                },
+                sum() {
+                    this.result = this.a + this.b;
+                },
             }
         }).mount('#app');
     </script>
 </body>
 </html>
+
+
