--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -30,12 +30,16 @@
             <div>Возраст: {{ user.age }} </div>
             <div>Телефон: {{ user.tel }}</div>
             <hr>
-            <h2>Цветы</h2>
-            <ul class="list-group">
-                <li v-for="(flower, id) in flowers" class="list-group-item">
-                    {{flower}} <button @click="(id, flower)">?</button>
-                </li>
-            </ul>
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h2 class="card-title">цветы</h2>
+                    <ul class="list-group">
+                        <li v-for="(flower, id) in flowers" class="list-group-item">
+                            {{flower}} <button @click="edit(id, flower)">?</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <hr>
             <h2>Calc</h2>
             <div class="row g-5">
